--- a/app/views/subreddits/edit.html.erb
+++ b/app/views/subreddits/edit.html.erb
@@ -1,12 +1,14 @@
-<h1>SubrEdit</h1>
+<div class="container">
+  <h1>SubrEdit</h1>
 
-<h1>
-  <strong>Current Subreddit Title:</strong>
-  <%= @subreddit.title %>
-</h1>
+  <h3>
+    <strong>Current Title:</strong>
+    <%= @subreddit.title %>
+  </h3>
 
-<%= form_for(@subreddit) do |f| %>
+  <%= form_for(@subreddit) do |f| %>
   <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.submit %>
-<% end %>
+  <%= f.text_field :title, :class => 'u-full-width' %>
+  <%= f.submit 'Update', :class => 'button-primary' %>
+  <% end %>
+</div>
