--- a/app/views/subreddits/new.html.erb
+++ b/app/views/subreddits/new.html.erb
@@ -1,7 +1,11 @@
-<h1>CREATE A SUBREDDIT</h1>
+<div class="container">
+  <h1>CREATE A SUBREDDIT</h1>
 
-<%= form_for(@subreddit) do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.submit %>
-<% end %>
+  <div class="row">
+    <%= form_for(@subreddit) do |f| %>
+    <%= f.label :title %>
+    <%= f.text_field :title, :class => 'u-full-width' %>
+    <%= f.submit 'Submit', :class => 'button-primary' %>
+    <% end %>
+  </div>
+</div>
