Added minimal UI

--- a/app/views/subreddits/index.html.erb
+++ b/app/views/subreddits/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <h1 class="five columns">Subreddit Index</h1>
+    <h1 class="five columns">Subreddits</h1>
     <%= link_to "Create a subreddit", new_subreddit_path, :class => 'button button-primary' %>
   </div>
 
