--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,6 +12,7 @@
   <div class="row">
     <h6 class="ten columns"><%= comment.content %></h6>
     <p><%= link_to "Edit comment", edit_post_comment_path(@post, comment), :class => 'button' %></p>
+    <p><%= link_to "Delete comment", post_comment_path(@post, comment), method: :delete, data: {confirm: 'Are you sure?'}, remote: true, :class => 'button' %></p>
   </div>
   <% end %>
 
