--- a/app/views/subreddits/index.html.erb
+++ b/app/views/subreddits/index.html.erb
@@ -14,7 +14,7 @@
   <div class="row">
     <h3 class="five columns"><%= link_to subreddit.title, subreddit %></h3>
     <%= link_to "Edit subreddit", edit_subreddit_path(subreddit), :class => 'button' %>
-    <!-- <p><%= link_to "Destory subreddit", subreddits_path(subreddit), method: :delete, data: { confirm: 'Are you sure?' } %></p> -->
+    <p><%= link_to "Destory subreddit", subreddit_path(subreddit), method: :delete, data: { confirm: 'Are you sure?' }, :class => 'button' %></p>
     <br>
   </div>
   <% end %>
