--- a/app/views/subreddits/show.html.erb
+++ b/app/views/subreddits/show.html.erb
@@ -13,6 +13,7 @@
   <div class="row">
     <h3 class="eight columns"><%= link_to post.title, post_path(post) %></h3>
     <%= link_to "Edit post", edit_subreddit_post_path(@subreddit, post), :class => 'button' %>
+    <%= link_to "Delete post", subreddit_post_path(@subreddit, post), method: :delete, data: {confirm: 'Are you sure?'}, remote: true, :class => 'button' %>
     <p class="twelve columns"><%= post.body %></p>
   </div>
   <% end %>
